--- a/static/nws.html
+++ b/static/nws.html
@@ -15,4 +15,4 @@
   return t;
 }(document, "script", "twitter-wjs"));</script>
 
-<a data-tweet-limit="1" data-chrome="transparent nofooter noborders noheader noscrollbar" id="twitter-wjs" class="twitter-timeline" href="https://twitter.com/NWSBayArea?ref_src=twsrc%5Etfw">Tweets by NWSBayArea</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a data-tweet-limit="1" data-theme="dark" data-chrome="transparent nofooter noborders noheader noscrollbar" id="twitter-wjs" class="twitter-timeline" href="https://twitter.com/NWSBayArea?ref_src=twsrc%5Etfw">Tweets by NWSBayArea</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
